--- a/src/app/components/admin/menu-editor/menu-editor.component.html
+++ b/src/app/components/admin/menu-editor/menu-editor.component.html
@@ -21,7 +21,7 @@
     </li>
 </ul>
 
-<div class="modal" materialize="modal" [materializeParams]="[{dismissible: true}]" [materializeActions]="modalDeleteActions">
+<!-- <div class="modal" materialize="modal" [materializeParams]="[{dismissible: true}]" [materializeActions]="modalDeleteActions">
     <div class="modal-content">
         <h3>Are you sure?</h3>
         <p>Are you sure you want to delete {{ items[selectedItem]?.name }}?</p>
@@ -51,4 +51,4 @@
         <a role="button" class="modal-action btn" (click)="saveMenuItem()">Save <i class="fa fa-fw fa-floppy"></i></a>
         <a role="button" class="modal-action btn-flat" (click)="closeEditModal()">Cancel</a>
     </div>
-</div>
+</div> -->
