--- a/src/app/components/admin/page-editor/page-editor.component.html
+++ b/src/app/components/admin/page-editor/page-editor.component.html
@@ -19,4 +19,4 @@
     <!-- <i class="fa fa-fw fa-floppy"></i> -->
 </button>
 
-<div materialize="toast" [materializeActions]="toasterActions"></div>
+<!-- <div materialize="toast" [materializeActions]="toasterActions"></div> -->
