--- a/src/app/components/admin/page-list/page-list.component.html
+++ b/src/app/components/admin/page-list/page-list.component.html
@@ -5,7 +5,7 @@
     <a *ngFor="let item of pages" [routerLink]="['/admin/page-editor', item]" class="collection-item">{{ item | replace:'/_/':'g':'/' }}</a>
 </div>
 
-<div class="modal" materialize="modal" [materializeParams]="[{dismissible: true}]" [materializeActions]="modalNewActions">
+<!-- <div class="modal" materialize="modal" [materializeParams]="[{dismissible: true}]" [materializeActions]="modalNewActions">
     <div class="modal-content">
         <h3>New page</h3>
         <div class="card-panel red white-text" *ngIf="newPageError">
@@ -23,4 +23,4 @@
         <a role="button" class="modal-action btn" (click)="createPage()">Create page <i class="fa fa-fw fa-floppy">save</i></a>
         <a role="button" class="modal-action modal-close btn-flat">Cancel</a>
     </div>
-</div>
+</div> -->
