--- a/src/app/components/admin/translations-manager/translations-manager.component.html
+++ b/src/app/components/admin/translations-manager/translations-manager.component.html
@@ -17,4 +17,4 @@
     </li>
 </ul>
 
-<div materialize="toast" [materializeActions]="toasterActions"></div>
+<!-- <div materialize="toast" [materializeActions]="toasterActions"></div> -->
