--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,36 +1,37 @@
 <!-- <img src="{{content_header_image}}" /> -->
+<div class="container-fluid">
+    <div class="row">
+        <div class="col s12">
+            <br />
+            <h1 class="light center"><abbr title="Scottish Council for Voluntary Organisations">SCVO</abbr> is the membership organisation for Scotland's charities, voluntary organisations and social enterprises</h1>
+        </div>
+    </div>
 
-<div class="row">
-    <div class="col s12">
-        <br />
-        <h1 class="light center"><abbr title="Scottish Council for Voluntary Organisations">SCVO</abbr> is the membership organisation for Scotland's charities, voluntary organisations and social enterprises</h1>
+    <div class="row">
+        <div class="col s12 m12 l4">
+            <h4>Featured</h4>
+            <!-- <h2>Event / policy promotion</h2> -->
+        </div>
+        <div class="col s12 m6 l4">
+            <h4>Blogs</h4>
+        </div>
+        <div class="col s12 m6 l4">
+            <h4>What's new</h4>
+        </div>
     </div>
-</div>
 
-<div class="row">
-    <div class="col s12 m12 l4">
-        <h4>Featured</h4>
-        <!-- <h2>Event / policy promotion</h2> -->
-    </div>
-    <div class="col s12 m6 l4">
-        <h4>Blogs</h4>
-    </div>
-    <div class="col s12 m6 l4">
-        <h4>What's new</h4>
-    </div>
-</div>
-
-<div class="row">
-    <div class="col s12">
-        &nbsp;<br />
-        &nbsp;<br />
-        &nbsp;<br />
-        &nbsp;<br />
-        New website in development
-        &nbsp;<br />
-        &nbsp;<br />
-        &nbsp;<br />
-        &nbsp;<br />
-        &nbsp;<br />
+    <div class="row">
+        <div class="col s12">
+            &nbsp;<br />
+            &nbsp;<br />
+            &nbsp;<br />
+            &nbsp;<br />
+            New website in development
+            &nbsp;<br />
+            &nbsp;<br />
+            &nbsp;<br />
+            &nbsp;<br />
+            &nbsp;<br />
+        </div>
     </div>
 </div>
