--- a/src/app/components/post/post-list.component.html
+++ b/src/app/components/post/post-list.component.html
@@ -1,90 +1,92 @@
-<div class="row page-content">
-    <div class="col s12">
-        <h2 class="header">Latest blog posts</h2>
+<div class="container-fluid">
+    <div class="row page-content">
+        <div class="col s12">
+            <h2 class="header">Latest blog posts</h2>
+        </div>
     </div>
-</div>
-<div class="row page-content">
-    <div class="col s12 m6 l4">
-        <div class="card horizontal">
-            <div class="card-image">
-                <img src="http://lorempixel.com/100/190/nature/1">
-            </div>
-            <div class="card-stacked">
-                <div class="card-content">
-                    <p><strong><small>April 19, 2017: Craig Wilson</small></strong></p>
-                    <h5><a [routerLink]="['/policy-research/blogs/snap-general-election-17']">Snap General Election '17</a></h5>
-                    <p>Once more unto the breach...</p>
+    <div class="row page-content">
+        <div class="col s12 m6 l4">
+            <div class="card horizontal">
+                <div class="card-image">
+                    <img src="http://lorempixel.com/100/190/nature/1">
                 </div>
-                <div class="card-action">
-                    <a [routerLink]="['/policy-research/blogs/snap-general-election']">Read more&hellip;</a>
+                <div class="card-stacked">
+                    <div class="card-content">
+                        <p><strong><small>April 19, 2017: Craig Wilson</small></strong></p>
+                        <h5><a [routerLink]="['/policy-research/blogs/snap-general-election-17']">Snap General Election '17</a></h5>
+                        <p>Once more unto the breach...</p>
+                    </div>
+                    <div class="card-action">
+                        <a [routerLink]="['/policy-research/blogs/snap-general-election']">Read more&hellip;</a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="col s12 m6 l4">
-        <div class="card horizontal">
-            <div class="card-image">
-                <img src="http://lorempixel.com/100/190/nature/2">
-            </div>
-            <div class="card-stacked">
-                <div class="card-content">
-                    <p><strong><small>April 17, 2017: James Adams</small></strong></p>
-                    <h5><a [routerLink]="['/policy-research/blogs/snap-general-election-17']">Visual impairment and local elections</a></h5>
-                    <p>In the 5th of our local election blog...</p>
+        <div class="col s12 m6 l4">
+            <div class="card horizontal">
+                <div class="card-image">
+                    <img src="http://lorempixel.com/100/190/nature/2">
                 </div>
-                <div class="card-action">
-                    <a [routerLink]="['/policy-research/blogs/snap-general-election-17']">Read more&hellip;</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col s12 m6 l4">
-        <div class="card horizontal">
-            <div class="card-image">
-                <img src="http://lorempixel.com/100/190/nature/4">
-            </div>
-            <div class="card-stacked">
-                <div class="card-content">
-                    <p><strong><small>April 10, 2017: John Downie</small></strong></p>
-                    <h5><a [routerLink]="['/policy-research/blogs/snap-general-election-17']">Brexit stakes are high for Scotland’s third sector</a></h5>
-                    <p>What next for charities...</p>
-                </div>
-                <div class="card-action">
-                    <a [routerLink]="['/policy-research/blogs/snap-general-election-17']">Read more&hellip;</a>
+                <div class="card-stacked">
+                    <div class="card-content">
+                        <p><strong><small>April 17, 2017: James Adams</small></strong></p>
+                        <h5><a [routerLink]="['/policy-research/blogs/snap-general-election-17']">Visual impairment and local elections</a></h5>
+                        <p>In the 5th of our local election blog...</p>
+                    </div>
+                    <div class="card-action">
+                        <a [routerLink]="['/policy-research/blogs/snap-general-election-17']">Read more&hellip;</a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="col s12 m6 l4">
-        <div class="card horizontal">
-            <div class="card-image">
-                <img src="http://lorempixel.com/100/190/nature/5">
-            </div>
-            <div class="card-stacked">
-                <div class="card-content">
-                    <p><strong><small>April 10, 2017: Amy Dalrymple</small></strong></p>
-                    <h5><a [routerLink]="['/policy-research/blogs/snap-general-election-17']">Open Local Government</a></h5>
-                    <p>In the fourth blog in our series...</p>
+        <div class="col s12 m6 l4">
+            <div class="card horizontal">
+                <div class="card-image">
+                    <img src="http://lorempixel.com/100/190/nature/4">
                 </div>
-                <div class="card-action">
-                    <a [routerLink]="['/policy-research/blogs/snap-general-election-17']">Read more&hellip;</a>
+                <div class="card-stacked">
+                    <div class="card-content">
+                        <p><strong><small>April 10, 2017: John Downie</small></strong></p>
+                        <h5><a [routerLink]="['/policy-research/blogs/snap-general-election-17']">Brexit stakes are high for Scotland’s third sector</a></h5>
+                        <p>What next for charities...</p>
+                    </div>
+                    <div class="card-action">
+                        <a [routerLink]="['/policy-research/blogs/snap-general-election-17']">Read more&hellip;</a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="col s12 m6 l4">
-        <div class="card horizontal">
-            <div class="card-image">
-                <img src="http://lorempixel.com/100/190/nature/6">
-            </div>
-            <div class="card-stacked">
-                <div class="card-content">
-                    <p><strong><small>April 6, 2017: Tracey Bird</small></strong></p>
-                    <h5><a [routerLink]="['/policy-research/blogs/snap-general-election-17']">Five ways to decide how much to pay your staff</a></h5>
-                    <p>Money, money, money...</p>
+        <div class="col s12 m6 l4">
+            <div class="card horizontal">
+                <div class="card-image">
+                    <img src="http://lorempixel.com/100/190/nature/5">
                 </div>
-                <div class="card-action">
-                    <a [routerLink]="['/policy-research/blogs/snap-general-election-17']">Read more&hellip;</a>
+                <div class="card-stacked">
+                    <div class="card-content">
+                        <p><strong><small>April 10, 2017: Amy Dalrymple</small></strong></p>
+                        <h5><a [routerLink]="['/policy-research/blogs/snap-general-election-17']">Open Local Government</a></h5>
+                        <p>In the fourth blog in our series...</p>
+                    </div>
+                    <div class="card-action">
+                        <a [routerLink]="['/policy-research/blogs/snap-general-election-17']">Read more&hellip;</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col s12 m6 l4">
+            <div class="card horizontal">
+                <div class="card-image">
+                    <img src="http://lorempixel.com/100/190/nature/6">
+                </div>
+                <div class="card-stacked">
+                    <div class="card-content">
+                        <p><strong><small>April 6, 2017: Tracey Bird</small></strong></p>
+                        <h5><a [routerLink]="['/policy-research/blogs/snap-general-election-17']">Five ways to decide how much to pay your staff</a></h5>
+                        <p>Money, money, money...</p>
+                    </div>
+                    <div class="card-action">
+                        <a [routerLink]="['/policy-research/blogs/snap-general-election-17']">Read more&hellip;</a>
+                    </div>
                 </div>
             </div>
         </div>
