--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,37 +1,76 @@
 <div class="container-fluid">
-    <div class="navbar navbar-default" role="navigation">
-        <nav class="brand">
+    <md-toolbar>
+        <!-- <button class="app-icon-button" (click)="sidenav.toggle()">
+        <i class="material-icons app-toolbar-menu">menu</i>
+        </button> -->
+
+        <a [routerLink]="['/']" class="brand-logo"><img src="app/assets/images/logos/scvo-white.png" /> SCVO <span class="version">beta</span></a>
+
+        <!-- <span class="example-fill-remaining-space"></span> -->
+
+        <ul menu="top" class="list-inline right menu-top"></ul>
+
+        <!-- <button md-button>Test</button> -->
+    </md-toolbar>
+
+    <md-toolbar>
+        <ul menu="main" class="list-inline navigation"></ul>
+    </md-toolbar>
+
+      <!-- <div class="mdc-toolbar__row">
+        <section class="mdc-toolbar__section mdc-toolbar__section- -align-start">
+          <span class="mdc-toolbar__title">Title</span>
+          <a class="material-icons">menu</a>
+        </section>
+      </div> -->
+    <!-- <div class="navbar navbar-default" role="navigation">
+        <div layout="column" layout-fill>
+        <!- - <nav class="brand">
             <div class="nav-wrapper">
                 <div class="row">
-                    <div class="col m8 l9 navbar-brand">
+                    <div class="col m8 l9 navbar-brand"> - ->
+                    <md-sidenav #sidenav mode="side" class="app-sidenav">
+                      Sidenav
+                    </md-sidenav>
+
+                    <md-toolbar color="primary">
+                      <button class="app-icon-button" (click)="sidenav.toggle()">
+                        <i class="material-icons app-toolbar-menu">menu</i>
+                      </button>
+
+                      Angular Material2 Example App
 
                         <a (click)="slidein('menu')" data-activates="mobile-menu" class="button-collapse menu">
                             <i class="fa fa-fw fa-menu"></i>
                         </a>
 
-                        <!-- <ul menu="mobile" id="mobile-menu" class="side-nav"></ul>
+                        <!- - <ul menu="mobile" id="mobile-menu" class="side-nav"></ul>
                         <a href="#" materialize="sideNav" [materializeParams]="[{closeOnClick: true, edge: 'left', menuWidth: 330}]" data-activates="mobile-menu" class="button-collapse">
                             <i class="material-icons">menu</i>
-                        </a> -->
+                        </a> - ->
                         <a [routerLink]="['/']" class="brand-logo"><img src="app/assets/images/logos/scvo-white.png" /> SCVO <span class="version">beta</span></a>
 
                         <ul menu="top" class="list-inline right menu-top"></ul>
 
-                        <!-- <ul menu="desktop_right" class="right hide-on-med-and-down"></ul> -->
+                        <span class="app-toolbar-filler"></span>
+                        <button md-button (click)="isDarkTheme = !isDarkTheme">TOGGLE DARK THEME</button>
+                      </md-toolbar>
+
+                        <!- - <ul menu="desktop_right" class="right hide-on-med-and-down"></ul> -->
                         <!-- <ul class="right hide-on-med-and-down">
                             <li *ngFor="let navigationItem of navigationMenu, let i = index" [routerLinkActive]="['active']">
                                 <a *ngIf="navigationItem.class == 'right'" [routerLink]="navigationItem.path">{{navigationItem.title}}</a>
                             </li>
                         </ul> -->
-                    </div>
+                    <!-- </div>
                     <div class="col hide-on-small-only m4 l3 right navbar-search">
                         <form ngForm="searchForm">
-                            <!-- <input-debounce delay="500" (value)="searchChanged($event)"></input-debounce> -->
+                            <!- - <input-debounce delay="500" (value)="searchChanged($event)"></input-debounce> - ->
                         </form>
                     </div>
                 </div>
             </div>
-        </nav>
+        </nav> - ->
         <nav class="navigation hide-on-med-and-down">
             <div class="nav-wrapper">
                 <div class="row">
@@ -42,5 +81,5 @@
                 </div>
             </div>
         </nav>
-    </div>
+    </div> -->
 </div>
