--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -1,5 +1,7 @@
-<div class="row">
-    <div class="col s12 page-content">
-        <div class="markdown-content" dynamic-component [componentTemplate]="content" [componentContext]="{ appService: appService }" [componentModules]="modules"></div>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col s12 page-content">
+            <div class="markdown-content" dynamic-component [componentTemplate]="content" [componentContext]="{ appService: appService }" [componentModules]="modules"></div>
+        </div>
     </div>
 </div>
