--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,28 +1,24 @@
 <div class="container-fluid">
     <md-toolbar>
-        <!-- <button class="app-icon-button" (click)="sidenav.toggle()">
-        <i class="material-icons app-toolbar-menu">menu</i>
-        </button> -->
+        <md-toolbar-row class="brand navbar">
+            <a [routerLink]="['/']" class="brand-logo"><img src="app/assets/images/logos/scvo-white.png" /> SCVO <span class="version">beta</span></a>
+            <ul menu="top" class="list-inline right menu-top"></ul>
+        </md-toolbar-row>
 
-        <a [routerLink]="['/']" class="brand-logo"><img src="app/assets/images/logos/scvo-white.png" /> SCVO <span class="version">beta</span></a>
-
-        <!-- <span class="example-fill-remaining-space"></span> -->
-
-        <ul menu="top" class="list-inline right menu-top"></ul>
-
-        <!-- <button md-button>Test</button> -->
+        <md-toolbar-row class="navbar">
+            <ul menu="main" class="list-inline navigation"></ul>
+        </md-toolbar-row>
     </md-toolbar>
-
-    <md-toolbar>
-        <ul menu="main" class="list-inline navigation"></ul>
-    </md-toolbar>
-
+</div>
       <!-- <div class="mdc-toolbar__row">
         <section class="mdc-toolbar__section mdc-toolbar__section- -align-start">
           <span class="mdc-toolbar__title">Title</span>
           <a class="material-icons">menu</a>
         </section>
       </div> -->
+      <!-- <button class="app-icon-button" (click)="sidenav.toggle()">
+      <i class="material-icons app-toolbar-menu">menu</i>
+  </button> -->
     <!-- <div class="navbar navbar-default" role="navigation">
         <div layout="column" layout-fill>
         <!- - <nav class="brand">
@@ -82,4 +78,3 @@
             </div>
         </nav>
     </div> -->
-</div>
