--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,7 +6,7 @@
         </md-toolbar-row>
 
         <md-toolbar-row class="navbar">
-            <ul menu="main" class="list-inline navigation"></ul>
+            <ul menu="main" class="list-inline nav"></ul>
         </md-toolbar-row>
     </md-toolbar>
 </div>
